# music-genre-classification

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: train.yaml
configs/datamodule/: gtzan.yaml
configs/logger/: mlflow.yaml
configs/model/: baseline.yaml  cnn.yaml
music_genre_classification/: commands.py
music_genre_classification/data/: data_manager.py  datamodule.py  dataset.py
music_genre_classification/deployment/: telegram_bot.py
music_genre_classification/inference/: infer.py
music_genre_classification/models/: baseline.py  cnn.py  lightning_module.py
music_genre_classification/training/: test.py  train.py
music_genre_classification/utils/: audio_processing.py  metrics.py
